<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Juego2.MenuJuego2Activity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/btn1Logica"
            style="@style/BotonMenu"
            android:text="@string/logica"
            android:textColor="@android:color/black" />
        <Button
            android:id="@+id/btn2Ciencia"
            style="@style/BotonMenu"
            android:text="@string/ciencia"
            android:textColor="@android:color/black" />
        <Button
            android:id="@+id/btn3Entretenimiento"
            style="@style/BotonMenu"
            android:text="@string/entretenimiento"
            android:textColor="@android:color/black" />
        <Button
            android:id="@+id/btn4Historia"
            style="@style/BotonMenu"
            android:text="@string/historia"
            android:textColor="@android:color/black" />
        <Button
            android:id="@+id/btn5Geografia"
            style="@style/BotonMenu"
            android:text="@string/geografia"
            android:textColor="@android:color/black" />
        <Button
            android:id="@+id/btn6Aleatorio"
            style="@style/BotonMenu"
            android:text="@string/aleatorio"
            android:textColor="@android:color/black" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>