<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Juego2.Juego2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="30dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:paddingTop="5dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_marginEnd="30dp">
                <TextView
                    android:id="@+id/quizScore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/J2Score"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/J2Puntaje"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </LinearLayout>


            <TextView
                android:id="@+id/countLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/J2NumPreg"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="25sp"
                android:background="@drawable/num_pregunta"
                android:overScrollMode="ifContentScrolls"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="5dp"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_marginStart="30dp">

                <TextView
                    android:id="@+id/quizTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/J2Time"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/J2Tiempo"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/preguntaLabel"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/J2Pregunta"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <Button
            android:id="@+id/respuestaBtn1"
            style="@style/BotonCatJuego2"
            android:onClick="chequearRespuesta"
            android:layout_height="60dp"
            android:text="@string/J2Respuesta1"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/respuestaBtn2"
            style="@style/BotonCatJuego2"
            android:onClick="chequearRespuesta"
            android:layout_height="60dp"
            android:text="@string/J2Respuesta2"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/respuestaBtn3"
            style="@style/BotonCatJuego2"
            android:onClick="chequearRespuesta"
            android:layout_height="60dp"
            android:text="@string/J2Respuesta3"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/respuestaBtn4"
            style="@style/BotonCatJuego2"
            android:onClick="chequearRespuesta"
            android:layout_height="60dp"
            android:text="@string/J2Respuesta4"
            android:textColor="@android:color/white" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/comodinPasar"
                style="@style/BotonComodinJuego2"
                android:text="@string/pasarPregunta"
                android:radius="9dp"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/comodinPista"
                style="@style/BotonComodinJuego2"
                android:text="@string/pedirPista"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </LinearLayout>





</LinearLayout>



