<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="220dp"
        android:layout_height="68dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="60dp">

        <Button
            android:id="@+id/button_jugar"
            style="@style/Boton"
            android:text="@string/opcion_jugar"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/button_estadisticas"
            style="@style/Boton"
            android:text="@string/opcion_estadisticas"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/button_ajustes"
            style="@style/Boton"
            android:text="@string/opcion_ajustes"
            android:textColor="@android:color/black" />

    </LinearLayout>
</LinearLayout>
